# subset_sum

./: .gitignore  Cargo.toml  changelog.md  subset_sum.sln  test_csv.csv  test_yaml.yml
.github/workflows/: build-release.yml  multiarch_build_release.yml  run-unit-tests.yml  test_building.yml
lib/src/: ExcelInput.Functions.fs  ExcelInput.Types.fs  Library.fs  SubsetSum.Functions.fs  SubsetSum.Types.fs  SubsetSum.fsproj
lib/test/: ExcelInput.Functions.Test.fs  Main.fs  SubsetSum.Test.fs  SubsetSumTest.fsproj
lib/test/test_fixtures/: testInput.xlsx
proptest-regressions/: csv_input.txt  pretty_print.txt  summation.txt
src/: config.rs  csv_input.rs  find_subsets.rs  lib.rs  main.rs  powerset.rs  pretty_print.rs  read_yaml.rs  summation.rs
